delete 아이콘 추가및 삭제하기 설정

--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -54,3 +54,12 @@
 .recipe-list .card.dark div {
   color: #e4e4e4;
 }
+
+.delete {
+  width: 1.5em;
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	cursor: pointer;
+	filter: invert(70%);
+}
